Added DELETE endpoint to the API
[#131918995]
